--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
   <div id="disqus_thread"></div>
   <script type="text/javascript">
-    var disqus_shortname = 'kitsched'; // required: replace example with your forum shortname
+    var disqus_shortname = {{ site.disqus_username }};
     (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
       dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
