--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -353,27 +353,27 @@ tbody tr:nth-child(odd) th {
 }
 
 /* Related posts */
-.related {
+.related, .previous-next {
   padding-top: 2rem;
   padding-bottom: 2rem;
   border-top: 1px solid #eee;
 }
-.related-posts {
+.related-posts, .previous-next-posts {
   padding-left: 0;
   list-style: none;
 }
-.related-posts h3 {
+.related-posts h3, .previous-next-posts h3 {
   margin-top: 0;
 }
-.related-posts li small {
+.related-posts li small, .previous-next-posts li small {
   font-size: 75%;
   color: #999;
 }
-.related-posts li a:hover {
+.related-posts li a:hover, .previous-next-posts li a:hover {
   color: #268bd2;
   text-decoration: none;
 }
-.related-posts li a:hover small {
+.related-posts li a:hover small, .previous-next-posts li a:hover small {
   color: inherit;
 }
 
