--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,5 +27,5 @@
   {% include icons.html %}
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <link rel="alternate" type="application/atom+xml" href="/feed/">
 </head>
