Algolia search. Feed remains.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,3 +55,7 @@ var disqus_shortname = '{{ site.disqus.username }}';
     {% endfor %}
   </ul>
 </div>
+
+<div class="source-file">
+  Built from: <a href="{{ site.github.repository_url }}/blob/{{ site.github.branch }}/{{ page.path }}">{{ page.path }}</a>.
+</div>
