--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   - /_assets/hyde.css
   {% endcss_asset_tag %}
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
   {% include icons.html %}
