A start for YouTube classes.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   - /_assets/poole.css
   - /_assets/syntax.css
   - /_assets/hyde.css
+  - /_assets/jr.css
   {% endcss_asset_tag %}
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
