Add open graph tags & Twitter card.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,12 @@
   <!-- Icons -->
   {% include icons.html %}
 
+  <!-- Open Graph -->
+  {% include open_graph.html %}
+
+  <!-- Twitter Card -->
+  {% include twitter_card.html %}
+
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" href="/feed/">
 </head>
