rel stuff for my friend G

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,9 @@
   <!-- Icons -->
   {% include icons.html %}
 
+  <!-- Canonical, rel="next" and rel="prev" -->
+  {% include canonical.html %}
+
   <!-- Open Graph -->
   {% include open_graph.html %}
 
