--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,14 +26,14 @@ var disqus_shortname = '{{ site.disqus.username }}';
     {% if page.previous.url %}
       <li>
       <h3>
-          <a class="prev" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+          <a rel="prev" class="prev" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
       </h3>
       </li>
     {% endif %}
     {% if page.next.url %}
       <li>
       <h3>
-          <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+          <a rel="next" class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
       </h3>
       </li>
     {% endif %}
