--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <!-- Icons -->
   {% include icons.html %}
 
-  <!-- Canonical, rel="next" and rel="prev" -->
+  <!-- Canonical, rel="prev" and rel="next" -->
   {% include canonical.html %}
 
   <!-- Open Graph -->
