Pagination pages title now includes page number

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,11 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+      {% if paginator.page == 1 %}
+        {{ site.title }} &middot; {{ site.tagline }}
+      {% else %}
+        {{ site.title }} &middot; Page {{ paginator.page }}
+      {% endif %}
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
