--- a/_assets/jr.css
+++ b/_assets/jr.css
@@ -1,3 +1,16 @@
+/*
+ *         __                                
+ *        / /___ _____  ____  _____          
+ *   __  / / __ `/ __ \/ __ \/ ___/          
+ *  / /_/ / /_/ / / / / /_/ (__  )           
+ *  \________,_/_/ /_/\____/____/     __   _ 
+ *     / __ \__  _______(_)________  / /__(_)
+ *    / /_/ / / / / ___/ / ___/_  / / //_/ / 
+ *   / _, _/ /_/ (__  ) / /__  / /_/ ,< / /  
+ *  /_/ |_|\__,_/____/_/\___/ /___/_/|_/_/   
+ *
+*/
+
 video {
   width: 100%;
   padding-bottom: 1rem;
