--- a/_assets/jr.css
+++ b/_assets/jr.css
@@ -1,13 +1,13 @@
 /*
- *         __                                
- *        / /___ _____  ____  _____          
- *   __  / / __ `/ __ \/ __ \/ ___/          
- *  / /_/ / /_/ / / / / /_/ (__  )           
- *  \________,_/_/ /_/\____/____/     __   _ 
+ *         __
+ *        / /___ _____  ____  _____
+ *   __  / / __ `/ __ \/ __ \/ ___/
+ *  / /_/ / /_/ / / / / /_/ (__  )
+ *  \________,_/_/ /_/\____/____/     __   _
  *     / __ \__  _______(_)________  / /__(_)
- *    / /_/ / / / / ___/ / ___/_  / / //_/ / 
- *   / _, _/ /_/ (__  ) / /__  / /_/ ,< / /  
- *  /_/ |_|\__,_/____/_/\___/ /___/_/|_/_/   
+ *    / /_/ / / / / ___/ / ___/_  / / //_/ /
+ *   / _, _/ /_/ (__  ) / /__  / /_/ ,< / /
+ *  /_/ |_|\__,_/____/_/\___/ /___/_/|_/_/
  *
 */
 
@@ -30,4 +30,12 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.archive-title {
+  margin-top: 0
+}
+
+.archive-post-date {
+  color: #9a9a9a;
 }
