--- a/_layouts/archive-category.html
+++ b/_layouts/archive-category.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 
-<h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
+<h1 class="archive-title">Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
 
 <ul class="posts">
 {% for post in page.posts %}
   <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
     <a class="post-link" href="{{ post.url }}">{{ post.title }}</a>
+    <span class="archive-post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
   </li>
 {% endfor %}
 </ul>
