--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,7 @@ var disqus_shortname = '{{ site.disqus.username }}';
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <label><input name="fields[name]" type="text">Name</label>
   <label><input name="fields[email]" type="email">E-mail</label>
+  <label><input name="fields[url]" type="url">URL</label>
   <label><textarea name="fields[message]"></textarea>Message</label>
   <button type="submit">Send</button>
 </form>
