--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,27 +8,9 @@ layout: default
   {{ content }}
 </div>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-var disqus_shortname = '{{ site.disqus.username }}';
-(function() {
-  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+{% include comment-form-disqus.html %}
 
-<form method="POST" action="https://janosrusiczki-staticman.herokuapp.com/v3/entry/github/janosrusiczki/janosrusiczki/master/comments">
-  <input name="options[redirect]" type="hidden" value="https://www.rusiczki.net">
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label>
-  <label><input name="fields[email]" type="email">E-mail</label>
-  <label><input name="fields[url]" type="url">URL</label>
-  <label><textarea name="fields[message]"></textarea>Message</label>
-  <button type="submit">Send</button>
-</form>
+{% include comment-form-staticman.html %}
 
 <div class="previous-next">
   <h2>Navigate</h2>
