--- a/_layouts/archive-year.html
+++ b/_layouts/archive-year.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Archive of posts from {{ page.date | date: "%Y" }}
 ---
 
 <h1 class="archive-title">Archive of posts from {{ page.date | date: "%Y" }}</h1>
