--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,3 +6,7 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+
+<div class="source-file">
+  Built from: <a href="{{ site.github.repository_url }}/blob/{{ site.github.branch }}/{{ page.path }}">{{ page.path }}</a>.
+</div>
