--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,6 +23,9 @@
           {% if node.layout == "page" %}
           <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
+          {% if node.external_url != null %}
+          <a class="sidebar-nav-item" href="{{ node.external_url }}">{{ node.title }}</a>
+          {% endif %}
         {% endif %}
       {% endfor %}
     </nav>
