--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,6 @@ layout: default
   {{ content }}
 </div>
 
-<div class="source-file">
-  Built from: <a href="{{ site.github.repository_url }}/blob/{{ site.github.branch }}/{{ page.path }}">{{ page.path }}</a>.
-</div>
+{% if page.name == 'about.md' %}
+  {% include built-from.html %}
+{% endif %}
