--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,6 +48,4 @@ layout: default
   </ul>
 </div>
 
-<div class="source-file">
-  Built from: <a href="{{ site.github.repository_url }}/blob/{{ site.github.branch }}/{{ page.path }}">{{ page.path }}</a>.
-</div>
+{% include built-from.html %}
