--- a/_assets/poole.css
+++ b/_assets/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #79c8ff;
   text-decoration: none;
 }
 a strong {
