--- a/_layouts/archive-category.html
+++ b/_layouts/archive-category.html
@@ -8,7 +8,7 @@ layout: default
 {% for post in page.posts %}
   <li>
     <a class="post-link" href="{{ post.url }}">{{ post.title }}</a>
-    <span class="archive-post-date">{{ post.date | date: "%A, %B %-d, %Y" }}</span>
+    <span class="archive-post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
   </li>
 {% endfor %}
 </ul>
