--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,20 @@ layout: default
   {{ content }}
 </div>
 
+ 
+<div class="post-categories">
+  {% assign categories = post.categories %}
+  {% if categories.count %}
+    <p>
+       Posted in:
+      {% for category in categories %}
+        <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+        {% unless forloop.last %}, {% endunless %}
+      {% endfor %}
+    </p>
+  {% endif %}
+</div>
+
 {% include comment-form-disqus.html %}
 
 {% include comment-form-staticman.html %}
