--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@ layout: default
  
 <div class="post-categories">
   {% assign categories = post.categories %}
+  <p>Categories count: {{ categories.count }}</p>
   {% if categories.count > 0 %}
     <p>
        Posted in:
