--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,10 @@ layout: default
   <span class="post-date">{{ page.date | date: "%A, %B %-d, %Y" }}</span>
   {{ content }}
 </div>
-
  
 <div class="post-categories">
   {% assign categories = page.categories %}
-  <p>Categories count: {{ categories.count }}</p>
+  <p>Categories count: {{ page.categories.count }}</p>
   {% if categories.count > 0 %}
     <p>
        Posted in:
