--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     <p>
        Posted in:
       {% for category in categories %}
-        <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+        <a href="{{site.baseurl}}/category/{{category|slugize}}">{{category}}</a>
         {% unless forloop.last %}, {% endunless %}
       {% endfor %}
     </p>
