--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,9 @@ layout: default
   {% assign categories = page.categories %}
   {% if categories.size > 0 %}
     <p>
-       Posted in:
+      Posted in:
       {% for category in categories %}
-        <a href="{{site.baseurl}}/category/{{category|slugize}}">{{category}}</a>
+        <a href="/category/{{category|slugify}}">{{category}}</a>
         {% unless forloop.last %}, {% endunless %}
       {% endfor %}
     </p>
