--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,7 @@ layout: default
   {% assign categories = page.categories %}
   {% if categories.size > 0 %}
     <p>
-      Posted in:
-      {% for category in categories %}
-        <a href="/category/{{category|slugify}}">{{category}}</a>
-        {% unless forloop.last %}, {% endunless %}
-      {% endfor %}
+      Posted in: {% for category in categories %}<a href="/category/{{category|slugify}}">{{category}}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}.
     </p>
   {% endif %}
 </div>
