--- a/_layouts/archive-year.html
+++ b/_layouts/archive-year.html
@@ -22,5 +22,5 @@ layout: default
   </li>
 {% endfor %}
 <h2>Navigation</h2>
-Go to: {% year_utilities next_year_link [current_year] %} | {% year_utilities previous_year_link [current_year] %}
+Go to: {% year_utilities next_year_link current_year %} | {% year_utilities previous_year_link current_year %}
 </ul>
