--- a/_layouts/archive-year.html
+++ b/_layouts/archive-year.html
@@ -24,9 +24,9 @@ layout: default
 </ul>
 {% capture next_year_link %}{% year_utilities next_year_link current_year %}{% endcapture %}
 {% capture previous_year_link %}{% year_utilities previous_year_link current_year %}{% endcapture %}
-{% if previous_year_link != '' || next_year_link != '' %}
+{% if previous_year_link != '' or next_year_link != '' %}
 <h2>Navigation</h2>
 Go to: {{ previous_year_link }}
-{% if previous_year_link != '' && next_year_link != '' %}|{% endif %}
+{% if previous_year_link != '' and next_year_link != '' %}|{% endif %}
 {{ next_year_link }}
 {% endif %}
