--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,6 @@
       {% endfor %}
     </nav>
 
-    <p>&copy; 2002 - {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p class="sidebar-copyright">&copy; 2002 - {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
