--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">
     {{ page.date | date: "%A" }},
-    <a href="/{{ page.date | date: "%Y/%m" }}/">{{ page.date | date: "%B }}</a>
+    <a href="/{{ page.date | date: "%Y/%m" }}/">{{ page.date | date: "%B" }}</a>
     <a href="/{{ page.date | date: "%Y/%m/%d" }}/">{{ page.date | date: "%-d" }}</a>,
     <a href="/{{ page.date | date: "%Y" }}/">{{ page.date | date: "%Y" }}</a>
   </span>
